# SYCL-samples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  coverity.yml  scorecard.yml
ci/: Dockerfile  build.sh  warning-suppresions.txt
cmake/: ConfigureMagnum.cmake  ConfigureSYCL.cmake
src/MIP_for_CUDA_backend/: send_recv_buff.cpp
src/MPI_for_CUDA_backend/: CMakeLists.txt  scatter_reduce_gather.cpp  send_recv_buff.cpp  send_recv_usm.cpp
src/MPI_with_SYCL/: CMakeLists.txt  scatter_reduce_gather.cpp  send_recv_buff.cpp  send_recv_usm.cpp
src/SYCL-Graph/: CMakeLists.txt  common.hpp  diamondDependency.cpp  dotProduct.cpp  dynamicCG.cpp  dynamicCG_with_Params.cpp  dynamicParamUpdateBuffers.cpp  dynamicParamUpdateUSM.cpp  whole_graph_update.cpp
src/fluid/: CMakeLists.txt  fluid.cpp  fluid.h  main.cpp
src/game_of_life/: CMakeLists.txt  main.cpp  sim.cpp  sim.hpp
src/include/: double_buf.hpp  sycl_bufs.hpp  tuple_utils.hpp
src/mandelbrot/: CMakeLists.txt  main.cpp  mandel-double.cpp  mandel-float.cpp  mandel.hpp
src/matrix_multiple_mp_compare/: matrix-multiply.cpp
src/matrix_multiply_omp_compare/: CMakeLists.txt  matrix-multiply.cpp
src/nbody/: CMakeLists.txt  InteropGLBuffer.hpp  integrator.hpp  main.cpp  sim.cpp  sim.hpp  sycl_bufs.hpp  tuple_utils.hpp
src/nbody/assets/: NBodyShader.frag  NBodyShader.vert  resources.conf
src/scan_parallel_inclusive/: CMakeLists.txt  scan.cpp
