find_package(MPI)
if(NOT MPI_FOUND)
    message(STATUS "MPI not found, skipping the MPI_for_CUDA_backend demo")
else()
    message(STATUS "Found MPI, configuring the MPI_for_CUDA_backend demo")
    foreach(TARGET send_recv_usm send_recv_buff scatter_reduce_gather)
        add_executable(${TARGET} ${TARGET}.cpp)
        target_compile_options(${TARGET} PUBLIC ${SYCL_FLAGS} ${MPI_INCLUDE_DIRS})
        target_link_options(${TARGET} PUBLIC ${SYCL_FLAGS} ${MPI_LIBRARIES})
    endforeach()
endif()
